--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "eta": "^3.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tailwindcss": "^3.3.3"
   }
 }
