--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc && npm run copy-files",
+    "copy-files": "copyfiles -u 1 src/views/index.eta public/* docs"
   },
   "keywords": [],
   "author": "",
@@ -16,13 +17,15 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
+    "copy-files": "^0.1.0",
     "jest": "^29.6.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.5.4" 
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "copyfiles": "^2.4.1",
     "eta": "^3.1.0",
     "express": "^4.18.2",
     "tailwindcss": "^3.3.3"
