--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "staticsitegenerator",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && npm run copy-files",
-    "copy-files": "copyfiles -u 1 src/views/index.eta public/* docs"
+    "build": "webpack --mode=production --node-env=production",
+    "copy-files": "copyfiles -u 1 src/views/index.eta public/* docs",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -17,17 +21,39 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@types/supertest": "^2.0.12",
+    "@webpack-cli/generators": "^3.0.7",
     "copy-files": "^0.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "mini-css-extract-plugin": "^2.7.5",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.3.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.13.1",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
     "copyfiles": "^2.4.1",
+    "crypto-browserify": "^3.12.0",
     "eta": "^3.1.0",
     "express": "^4.18.2",
-    "tailwindcss": "^3.3.3"
+    "fs-extra": "^11.1.1",
+    "node-libs-browser": "^2.2.1",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.3.3",
+    "url": "^0.11.1",
+    "util": "^0.12.5"
   }
 }
